fix: nodes panel alignment

--- a/src/components/appBar/styles.css
+++ b/src/components/appBar/styles.css
@@ -5,20 +5,23 @@
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  padding-right: 105px;
+}
+
+#button-container {
+  width: 16vw;
 }
 
 #save-button {
-    padding: 10px;
-    width: 180px;
-    color: #1212a3d6;
-    font-weight: 700;
-    font-size: 14px;
-    background-color: white;
-    border: 1px solid;
-    border-radius: 6px;
-    height: 45px;
-    cursor: pointer;
+  padding: 10px;
+  width: 180px;
+  color: #1212a3d6;
+  font-weight: 700;
+  font-size: 14px;
+  background-color: white;
+  border: 1px solid;
+  border-radius: 6px;
+  height: 45px;
+  cursor: pointer;
 }
 
 .button-clicked {
