--- a/src/components/nodesPanel/styles.css
+++ b/src/components/nodesPanel/styles.css
@@ -1,6 +1,6 @@
 #panel-root {
   height: 100%;
-  width: 30vw;
+  width: 20vw;
   border-left: 1px solid #00000024;
   border-top: 1px solid #00000024;
 }
